trying to resolve image issue on mobile devices

--- a/css/local.css
+++ b/css/local.css
@@ -166,14 +166,14 @@ nav {
     /*
     margin-left: -15px;
     margin-right: -15px;*/
-    height: 200px;
+    min-height: 200px;
     overflow: hidden;
 }
 
 header#homepage-main {
   background: url(../images/stock-photo-52184990-girl-and-horse.jpg) no-repeat center center fixed; 
   display: table;
-  height: 100%;
+  min-height: 100%;
   position: relative;
   width: 100%;
   -webkit-background-size: cover;
